# vnc-girlskissing

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  compose.yaml  docker-compose.yml
.github/workflows/: publish.yml
src/: main.c  vnc.c  vnc.h
